--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "dotenv": "^8.6.0",
     "express": "^4.21.2",
-    "mongoose": "^5.13.23"
+    "mongodb": "^6.19.0",
+    "mongoose": "^8.18.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
